Walljump fixing and Particles effects
Some fixes for the walljump mechanic, and animations for it.

Particles effects for Jump, Land and when sticking to a wall

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,4 +98,6 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOu
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 FrictionCombineMode=Multiply
+MaxAngularVelocity=7200.000000
+DefaultTerminalVelocity=8000.000000
 
