--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -98,6 +98,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump Dualshock",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=GenericUSBController_Button2)
 +ActionMappings=(ActionName="Bounce",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="Bounce",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Right / Left",Scale=1.000000,Key=D)
