--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,5 +8,8 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Enemy",DevComment="")
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
++GameplayTagList=(Tag="GrappleTarget",DevComment="")
++GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
++GameplayTagList=(Tag="GrappleTarget.Static",DevComment="")
 +GameplayTagList=(Tag="Pottit",DevComment="")
 
