--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MechanicsTesting/GrappleTargeting.GrappleTargeting
+GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
 GlobalDefaultGameMode=/Game/Blueprints/Gamemode/BP_STEIKEMANN_UEGameModeBase.BP_STEIKEMANN_UEGameModeBase_C
 EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
 
