--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,3 +102,17 @@ FrictionCombineMode=Multiply
 MaxAngularVelocity=7200.000000
 DefaultTerminalVelocity=8000.000000
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=D8075E35483450CD3FA06692A34AA437
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
