new prototype level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
+GameDefaultMap=/Game/Maps/Prototype_Showcase.Prototype_Showcase
 GlobalDefaultGameMode=/Game/Blueprints/Gamemode/BP_STEIKEMANN_UEGameModeBase.BP_STEIKEMANN_UEGameModeBase_C
-EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Maps/Prototype_Showcase.Prototype_Showcase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
