Package attempt,changes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,3 +116,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.RendererSettings]
+r.VirtualTextures=True
+
