--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,6 @@
 ProjectID=D34C782B4690E3015AC2BE86D5DF1901
 ProjectVersion=0.0.1.0
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_DebugGame
+
