--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Enemy",DevComment="")
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget",DevComment="")
++GameplayTagList=(Tag="GrappleTarget.Dynamic",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Static",DevComment="")
 +GameplayTagList=(Tag="Pottit",DevComment="")
