--- a/STEIKEMANN_UE.uproject
+++ b/STEIKEMANN_UE.uproject
@@ -22,6 +22,15 @@
 		{
 			"Name": "NiagaraExtras",
 			"Enabled": false
+		},
+		{
+			"Name": "Bridge",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Mac",
+				"Linux"
+			]
 		}
 	]
 }
