--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="CameraVolume",DevComment="")
 +GameplayTagList=(Tag="Enemy",DevComment="")
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget",DevComment="")
