Corruption Core & Collectibles

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -4,11 +4,15 @@ WarnOnInvalidTags=True
 ClearInvalidTags=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="CorruptionCore",NewTagName="Environment")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="CameraVolume",DevComment="")
++GameplayTagList=(Tag="Collectible",DevComment="")
 +GameplayTagList=(Tag="Enemy",DevComment="")
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
++GameplayTagList=(Tag="Environment",DevComment="")
++GameplayTagList=(Tag="Environment.CorruptionCore",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Dynamic",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
