--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
 +GameplayTagList=(Tag="Environment",DevComment="")
 +GameplayTagList=(Tag="Environment.CorruptionCore",DevComment="")
++GameplayTagList=(Tag="Environment.Hazard",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Dynamic",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
