Player death, pitfalls and respawn

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="CameraVolume",DevComment="")
 +GameplayTagList=(Tag="Collectible",DevComment="")
++GameplayTagList=(Tag="DeathZone",DevComment="")
 +GameplayTagList=(Tag="Enemy",DevComment="")
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
 +GameplayTagList=(Tag="Environment",DevComment="")
@@ -18,5 +19,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GrappleTarget.Dynamic",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Static",DevComment="")
++GameplayTagList=(Tag="PlayerRespawn",DevComment="")
 +GameplayTagList=(Tag="Pottit",DevComment="")
 
