Sticking Enemy To Wall
Enemies can stick to walls when they're in the air. Making them static grappling targets

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -15,6 +15,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Environment",DevComment="")
 +GameplayTagList=(Tag="Environment.CorruptionCore",DevComment="")
 +GameplayTagList=(Tag="Environment.Hazard",DevComment="")
++GameplayTagList=(Tag="Environment.StickingWall",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Dynamic",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
