Pogo: Passive(refactor) & Groundpound

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -21,5 +21,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Static",DevComment="")
 +GameplayTagList=(Tag="PlayerRespawn",DevComment="")
++GameplayTagList=(Tag="PogoTarget",DevComment="")
 +GameplayTagList=(Tag="Pottit",DevComment="")
 
