Pogo and GilbertsHut

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MechanicsTesting/Attacks.Attacks
+GameDefaultMap=/Game/Maps/Levels/GilbertsHut.GilbertsHut
 GlobalDefaultGameMode=/Game/Blueprints/Gamemode/BP_STEIKEMANN_UEGameModeBase.BP_STEIKEMANN_UEGameModeBase_C
-EditorStartupMap=/Game/Maps/MechanicsTesting/Attacks.Attacks
+EditorStartupMap=/Game/Maps/Levels/GilbertsHut.GilbertsHut
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
