--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -119,4 +119,12 @@ ManualIPAddress=
 
 [/Script/Engine.RendererSettings]
 r.VirtualTextures=True
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=True
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.AutoExposure.Bias=10.500000
+r.DefaultFeature.LightUnits=2
 
