--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -70,6 +70,10 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
+bEnableMotionControls=True
+bFilterInputByPlatformUser=False
+bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -118,8 +122,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MenuNavigation_Y",Scale=-1.000000,Key=Gamepad_DPad_Down)
 +AxisMappings=(AxisName="MenuNavigation_Y",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="MenuNavigation_Y",Scale=-1.000000,Key=Down)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
