--- a/STEIKEMANN_UE.uproject
+++ b/STEIKEMANN_UE.uproject
@@ -22,6 +22,10 @@
 		{
 			"Name": "NiagaraExtras",
 			"Enabled": false
+		},
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
 		}
 	]
 }
