--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -2,9 +2,11 @@
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
 ClearInvalidTags=False
+AllowEditorTagUnloading=True
+AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagRedirects=(OldTagName="CorruptionCore",NewTagName="Environment")
++GameplayTagRedirects=(OldTagName="",NewTagName="")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="CameraVolume",DevComment="")
@@ -12,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DeathZone",DevComment="")
 +GameplayTagList=(Tag="Enemy",DevComment="")
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
++GameplayTagList=(Tag="EnemySpawner",DevComment="")
 +GameplayTagList=(Tag="Environment",DevComment="")
 +GameplayTagList=(Tag="Environment.CorruptionCore",DevComment="")
 +GameplayTagList=(Tag="Environment.Hazard",DevComment="")
