--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -132,4 +132,18 @@ r.DefaultFeature.LightUnits=2
 r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
+r.Lumen.TraceMeshSDFs=1
+r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
+r.AllowGlobalClipPlane=False
+r.ForwardShading=False
+r.Shadow.Virtual.Enable=0
+r.RayTracing=False
+r.SkinCache.CompileShaders=True
+r.RayTracing.Shadows=True
+r.RayTracing.Skylight=True
+r.RayTracing.UseTextureLod=True
+r.Lumen.HardwareRayTracing=True
+r.NormalMapsForStaticLighting=False
+r.DistanceFields.DefaultVoxelDensity=0.200000
+r.AllowStaticLighting=False
 
