--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,4 +5,6 @@ ProjectVersion=0.0.1.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_DebugGame
+bUseIoStore=False
+bMakeBinaryConfig=True
 
