--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/STEIKEMANN_UE")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/STEIKEMANN_UE")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="STEIKEMANN_UEGameModeBase")
+NearClipPlane=20.000000
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
