--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,6 +16,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Enemy.AubergineDoggo",DevComment="")
 +GameplayTagList=(Tag="EnemySpawner",DevComment="")
 +GameplayTagList=(Tag="Environment",DevComment="")
++GameplayTagList=(Tag="Environment.BouncyShroom",DevComment="")
 +GameplayTagList=(Tag="Environment.CorruptionCore",DevComment="")
 +GameplayTagList=(Tag="Environment.Hazard",DevComment="")
 +GameplayTagList=(Tag="Environment.StickingWall",DevComment="")
