--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -20,6 +20,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Environment.CorruptionCore",DevComment="")
 +GameplayTagList=(Tag="Environment.Hazard",DevComment="")
 +GameplayTagList=(Tag="Environment.StickingWall",DevComment="")
++GameplayTagList=(Tag="Environment.WaterPuddle",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Dynamic",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
