--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/Gamemode/BP_STEIKEMANN_UEGameModeBase.BP_STEIKEMANN_UEGameModeBase_C
-EditorStartupMap=/Game/Maps/MechanicsTesting/Attacks.Attacks
+EditorStartupMap=/Game/Maps/Prototype_Showcase.Prototype_Showcase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -150,7 +150,7 @@ r.DistanceFields.DefaultVoxelDensity=0.200000
 r.AllowStaticLighting=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
-DefaultGraphicsRHI=DefaultGraphicsRHI_Default
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 -D3D12TargetedShaderFormats=PCD3D_SM5
 +D3D12TargetedShaderFormats=PCD3D_SM5
 +D3D12TargetedShaderFormats=PCD3D_SM6
