--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,6 +25,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GrappleTarget.Dynamic",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Static",DevComment="")
++GameplayTagList=(Tag="InkFlower",DevComment="")
 +GameplayTagList=(Tag="PlayerRespawn",DevComment="")
 +GameplayTagList=(Tag="PogoTarget",DevComment="")
 +GameplayTagList=(Tag="Pottit",DevComment="")
