--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -106,6 +106,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="GroundPound",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
 +ActionMappings=(ActionName="GroundPound",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
 +ActionMappings=(ActionName="GroundPound",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="ShowHUD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
++ActionMappings=(ActionName="ShowHUD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightThumbstick)
++ActionMappings=(ActionName="ShowHUD",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=N)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Right / Left",Scale=1.000000,Key=D)
