--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.umap filter=lfs diff=lfs merge=lfs -text
 Content/__ExternalActors__** filter=lfs diff=lfs merge=lfs -text
 Content/__ExternalObjects__** filter=lfs diff=lfs merge=lfs -text
+Content/Maps** filter=lfs diff=lfs merge=lfs -text
