GrappleSmack Curve Indicator & Cancel Grapplesmack
1. Have a visual indicator of the where the grappled enemy will be launched and landed. Using draw debug lines.

2. Can cancel the grappling of enemies on the ground by pressing B and Jumping. Can also hold them a lot longer.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -92,7 +92,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PauseMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="PauseMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +ActionMappings=(ActionName="PauseMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
-+ActionMappings=(ActionName="AnyKey",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=AnyKey)
++ActionMappings=(ActionName="AnyKey_InputType",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=AnyKey)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +ActionMappings=(ActionName="SmackAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
