Player Controller and Disabled Common UI

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ bUseIoStore=False
 bMakeBinaryConfig=True
 
 [/Script/CommonInput.CommonInputSettings]
-InputData=/Game/Input/OurInputData.OurInputData_C
+InputData=None
 
 [CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
 DefaultInputType=MouseAndKeyboard
