Pre Package Fixes
Controls Widget: Control Scheme changing properly while on the main menu.

Added some lights for Gilberts hut and secret room in tutorial level.

Bounce Shroom now resets double jump.

Can attack while in air.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,7 +16,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/STEIKEMANN_UE")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="STEIKEMANN_UEGameModeBase")
 NearClipPlane=20.000000
-GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+GameViewportClientClassName=/Script/Engine.GameViewportClient
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
