Improving Compile Time 06/04/2023
Created a module and moved the abstractcharacter class over.

Using visual studio compile score to determine the include files.
Improving regular compile time from 35s to 22s. (when changing steikemanncharacter header file)

--- a/STEIKEMANN_UE.uproject
+++ b/STEIKEMANN_UE.uproject
@@ -12,6 +12,14 @@
 				"Engine",
 				"AIModule"
 			]
+		},
+		{
+			"Name": "BaseClasses",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
