--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -150,6 +150,7 @@ r.NormalMapsForStaticLighting=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
 r.AllowStaticLighting=True
 r.Nanite.ProjectEnabled=False
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
