--- a/STEIKEMANN_UE.uproject
+++ b/STEIKEMANN_UE.uproject
@@ -35,6 +35,10 @@
 		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true
+		},
+		{
+			"Name": "SunPosition",
+			"Enabled": true
 		}
 	]
 }
