--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/Gamemode/BP_STEIKEMANN_UEGameModeBase.BP_STEIKEMANN_UEGameModeBase_C
-EditorStartupMap=/Game/Maps/MechanicsTesting/WallJump.WallJump
+EditorStartupMap=/Game/Maps/Prototype_Showcase.Prototype_Showcase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
