--- a/STEIKEMANN_UE.uproject
+++ b/STEIKEMANN_UE.uproject
@@ -20,6 +20,14 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
+		},
+		{
+			"Name": "MechanicTestingClasses",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
