--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -26,6 +26,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GrappleTarget.Enemy",DevComment="")
 +GameplayTagList=(Tag="GrappleTarget.Static",DevComment="")
 +GameplayTagList=(Tag="InkFlower",DevComment="")
++GameplayTagList=(Tag="NPC",DevComment="")
++GameplayTagList=(Tag="NPC.OrangeGirl",DevComment="")
 +GameplayTagList=(Tag="PlayerRespawn",DevComment="")
 +GameplayTagList=(Tag="PogoTarget",DevComment="")
 +GameplayTagList=(Tag="Pottit",DevComment="")
