--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -183,3 +183,6 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
+[/Script/Engine.AnimationSettings]
+bEnablePerformanceLog=True
+
