--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -140,7 +140,7 @@ r.Lumen.TraceMeshSDFs=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.AllowGlobalClipPlane=True
 r.ForwardShading=False
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=False
 r.SkinCache.CompileShaders=True
 r.RayTracing.Shadows=True
@@ -152,6 +152,7 @@ r.DistanceFields.DefaultVoxelDensity=0.200000
 r.AllowStaticLighting=True
 r.Nanite.ProjectEnabled=False
 r.CustomDepth=3
+r.MinScreenRadiusForCSMDepth=0.100000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
