--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -153,6 +153,8 @@ r.AllowStaticLighting=True
 r.Nanite.ProjectEnabled=False
 r.CustomDepth=3
 r.MinScreenRadiusForCSMDepth=0.100000
+r.EarlyZPass=2
+r.EarlyZPassOnlyMaterialMasking=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
